# messenger-counter

./: .gitignore  LICENSE  MessengerCounter.py  README.md  counter.py  gui.py  mc.py  pyproject.toml  requirements.txt  setup.py  source.py
gui/: count.html  index.html  main.html  stats.html  style.css
messenger_counter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: counter.py  source.py  stats.py
