[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messenger-counter"
version = "0.5.1"
description = "Package for counting messages from Facebook Messenger"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Krzysztof Mizgała", email = "krzysztof@mizgala.pl" },
]
keywords = [
    "chart",
    "count",
    "counter",
    "facebook",
    "messages",
    "messenger",
    "statistics",
    "stats",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib",
    "pandas",
]

[project.urls]
Code = "https://github.com/KMChris/messenger-counter"
Documentation = "https://messenger-counter.mizgala.pl/"
Download = "https://pypi.org/project/messenger-counter/"
Homepage = "https://github.com/KMChris/messenger-counter"
"Issue Tracker" = "https://github.com/KMChris/messenger-counter/issues"
